# lenguajes_benchmark

./: README.md  benchmark_go_test.go  fill_database_test.go  main.go
go/: go.mod  main.go
rust/: Cargo.toml  README.md
rust/src/: main.rs
