[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
async-std-rt = ["async-std", "sqlx/runtime-async-std-native-tls"]

[dependencies]
actix-web = "4.3.1"
async-std = { version = "1.10.0", features = ["attributes"], optional = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
dotenv = "0.15.0"
sqlx = { version = "0.6.3", features = ["mysql","runtime-async-std-native-tls"] }
